--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,9 +18,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: true
-      - run: sudo apt install gcc-12.2 g++-12.2
-      - run: sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-12.2 100 --slave /usr/bin/g++ g++ /usr/bin/g++-12.2 --slave /usr/bin/gcov gcov /usr/bin/gcov-12.2
-      - run: sudo update-alternatives --set gcc /usr/bin/gcc-12.2
+      - run: sudo apt install -y gcc-12 g++-12
       - run: sudo apt-get update && sudo apt-get install libboost-test-dev -y
       - run: cmake . -DPATCH_VERSION=${{ github.run_number }}
       - run: cmake --build .
